kobuki/src/logs/[ssh pi@192.168.0.14]  (2023-11-16_204119)  192.168.0.13 (pi).log
=~=~=~=~=~=~=~=~=~=~=~= MobaXterm log 2023.11.16 20:41:19 =~=~=~=~=~=~=~=~=~=~=~=
pi@192.168.0.14's password: 
    
                    MobaXterm Professional Edition v22.0                
                   (SSH client, X server and network tools)               
                                                                          
      SSH session to pi@192.168.0.14                                     
        Direct SSH      :                                               
        SSH compression :                                               
        SSH-browser     :                                               
        X11-forwarding  :    (remote display is forwarded through SSH)  
                                                                          
      For more info, ctrl+click on help or visit our website.            
    

Linux raspberrypi 5.15.76-v7+ #1597 SMP Fri Nov 4 12:13:17 GMT 2022 armv7l

The programs included with the Debian GNU/Linux system are free software;
the exact distribution terms for each program are described in the
individual files in /usr/share/doc/*/copyright.

Debian GNU/Linux comes with ABSOLUTELY NO WARRANTY, to the extent
permitted by applicable law.
Last login: Thu Nov 16 15:17:12 2023
pi@raspberrypi:~ $ cd kobuki/
pi@raspberrypi:~/kobuki $ . env.sh 
pi@raspberrypi:~/kobuki $ htop
    0[0.0%]   Tasks: 64, 109 thr; 1 running  1[0.0%]   Load average: 0.82 0.83 0.89   2[||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||100.0%]   Uptime: 01:48:17  3[||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||100.0%]Mem[|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||498M/922M]Swp[|2.00M/1024M]  PID USER      PRI  NI  VIRT   RES   SHR S CPU%MEM%   TIME+  Command 1724 pi         20   0  175M 60664 37536 S 100.  6.4  0:43.57 node server.js1749 pi20   0  9700  4196  2640 R 100.  0.4  0:00.12 htop1 root       20   0 33736  8824  7020 S  0.0  0.9  0:04.89 /sbin/init134 root       20   0 45776 13456 12716 S  0.0  1.4  0:01.15 /lib/systemd/systemd-journald161 root       20   0 20408  4984  3424 S  0.0  0.5  0:01.60 /lib/systemd/systemd-udevd315 systemd-t  20   0 22288  5420  4872 S  0.0  0.6  0:00.46 /lib/systemd/systemd-timesyncd350 systemd-t  20   0 22288  5420  4872 S  0.0  0.6  0:00.00 /lib/systemd/systemd-timesyncd353 avahi      20   0  6916  3068  2724 S  0.0  0.3  0:07.24 avahi-daemon: running [raspberrypi.local]354 root       20   0  8200  2396  2184 S  0.0  0.3  0:00.04 /usr/sbin/cron -f356 messagebu  20   0  8040  3852  3128 S  0.0  0.4  0:00.79 /usr/bin/dbus-daemon --system --address=systemd: --nofork --nopidfile --systemd-activation --syslog-only369 avahi      20   0  6756   212     0 S  0.0  0.0  0:00.00 avahi-daemon: chroot helper381 root       20   0 40916  7060  5500 S  0.0  0.7  0:00.31 /usr/libexec/polkitd --no-debug434 root       20   0 26544  2892  2568 S  0.0  0.3  0:00.16 /usr/sbin/rsyslogd -n -iNONE443 root       20   0 13096  6040  5428 S  0.0  0.6  0:00.49 /lib/systemd/systemd-logind452 nobody     20   0  5312  2264  2080 S  0.0  0.2  0:00.10 /usr/sbin/thd --triggers /etc/triggerhappy/triggers.d/ --socket /run/thd.socket --user nobody --deviceglob /dev/input/event*453 root       20   0 11788  4016  3640 S  0.0  0.4  0:00.09 /sbin/wpa_supplicant -u -s -O /run/wpa_supplicant456 root       20   0 40916  7060  5500 S  0.0  0.7  0:00.00 /usr/libexec/polkitd --no-debug462 root       20   0  2940  1896  1596 S  0.0  0.2  0:00.05 /usr/sbin/dhcpcd -b -q468 root       20   0 26544  2892  2568 S  0.0  0.3  0:00.04 /usr/sbin/rsyslogd -n -iNONE469 root       20   0 26544  2892  2568 S  0.0  0.3  0:00.01 /usr/sbin/rsyslogd -n -iNONE470 root       20   0 26544  2892  2568 S  0.0  0.3  0:00.07 /usr/sbin/rsyslogd -n -iNONE471 root       20   0 40916  7060  5500 S  0.0  0.7  0:00.06 /usr/libexec/polkitd --no-debug495 root       20   0 27696    72     0 S  0.0  0.0  0:00.10 /usr/sbin/rngd -r /dev/hwrng496 root       20   0 27696    72     0 S  0.0  0.0  0:00.08 /usr/sbin/rngd -r /dev/hwrng497 root       20   0 27696    72     0 S  0.0  0.0  0:00.00 /usr/sbin/rngd -r /dev/hwrng498 root       20   0 27696    72     0 S  0.0  0.0  0:00.00 /usr/sbin/rngd -r /dev/hwrng501 root       20   0 29532  6832  5604 S  0.0  0.7  0:00.16 /usr/sbin/cupsd -l507 root       20   0 48576  8688  7432 S  0.0  0.9  0:00.40 /usr/sbin/ModemManager512 root       20   0  8264  3628  3072 S  0.0  0.4  0:00.34 /bin/login -f549 root       20   0 48576  8688  7432 S  0.0  0.9  0:00.00 /usr/sbin/ModemManager551 root       20   0 48576  8688  7432 S  0.0  0.9  0:00.04 /usr/sbin/ModemManager564 root       20   0 12408  6028  5360 S  0.0  0.6  0:00.14 sshd: /usr/sbin/sshd -D [listener] 0 of 10-100 startups566 lp         20   0 15280  4792  4188 S  0.0  0.5  0:00.02 /usr/lib/cups/notifier/dbus dbus://567 lp         20   0 15280  4928  4324 S  0.0  0.5  0:00.01 /usr/lib/cups/notifier/dbus dbus://568 lp         20   0 15280  4880  4276 S  0.0  0.5  0:00.01 /usr/lib/cups/notifier/dbus dbus://569 lp         20   0 15280  4976  4372 S  0.0  0.5  0:00.01 /usr/lib/cups/notifier/dbus dbus://570 lp         20   0 15280  4884  4280 S  0.0  0.5  0:00.02 /usr/lib/cups/notifier/dbus dbus://572 root       20   0 42628  8328  7300 S  0.0  0.9  0:00.08 /usr/sbin/cups-browsed574 root       20   0 42628  8328  7300 S  0.0  0.9  0:00.00 /usr/sbin/cups-browsed575 root       20   0 42628  8328  7300 S  0.0  0.9  0:00.00 /usr/sbin/cups-browsed578 root       20   0 12032  3108  2860 S  0.0  0.3  0:00.10 wpa_supplicant -B -c/etc/wpa_supplicant/wpa_supplicant.conf -iwlan0592 root       20   0  2056    36     0 S  0.0  0.0  0:00.00 /usr/bin/hciattach /dev/serial1 bcm43xx 921600 noflow - b8:27:eb:c6:fc:23603 root       20   0 21452  7936  7132 S  0.0  0.8  0:00.11 /usr/libexec/bluetooth/bluetoothd609 pi20   0 14524  7748  6788 S  0.0  0.8  0:00.50 /lib/systemd/systemd --user610 pi20   0 36164  2520  1508 S  0.0  0.3  0:00.00 (sd-pam)653 pi9 -11 26604  4856  3940 S  0.0  0.5  0:00.04 /usr/bin/pipewire654 pi9 -11  101M  9496  7644 S  0.0  1.0  0:00.32 /usr/bin/pulseaudio --daemonize=no --log-target=journal655 pi-21   0 26604  4856  3940 S  0.0  0.5  0:00.00 /usr/bin/pipewire656 rtkit      21   1 24208  2376  2172 S  0.0  0.3  0:00.14 /usr/libexec/rtkit-daemon657 rtkit      20   0 24208  2376  2172 S  0.0  0.3  0:00.06 /usr/libexec/rtkit-daemonF1Help  F2Setup F3SearchF4FilterF5Tree  F6SortByF7Nice -F8Nice +F9Kill  F10Quit||1.3|73 0.841.9%82.6%499728  4196  2640 R  3.3  000.17 htop 78714644  4952  3924 S  0.7  0.508 sshd: pi@pts/0 1520 pi20   0  251M  133M 33608 S  0.7 14.5  0:43.23 /home/pi/.vscode-server/bin/d037ac076cee195194f93ce6fe2bdfe2969cc82d/node --max-old-space-size=3072 /home/pi/.vscode-server/bin/d037ac076cee19
9 0||||||7.720||||3.224175M 57732 37536 S  7.7  6.1  0:43.69 node server.js1749 9728  4196  2640 R  3.2  0.422 htop657 rtkit      20   0 24208  2376  2172 S  0.0  0.3  0:00.06 /usr/libexec/rtkit-daemon  0.0|6||||12.91|852412.9  6.281.95 1403 pi20   0  218M 93548 36704 S  0.6  9.9  0:49.53 /home/pi/.vscode-server/bin/d037ac076cee195194f93ce6fe2bdfe2969cc82d/node --dns-result-order=ipv4first /home/pi/.vscode-server/bin/d037ac076ce|7|||||||||9.85|         33|| 2.095801.1  6.3  0:44.062.08787 pi20   0 14644  4952  3924 S  0.7  0.5  0:00.09 sshd: pi@pts/0 1006 pi20   0  190M 74876 37520 S  0.7  7.9  0:55.07 /home/pi/.vscode-server/bin/d037ac076cee195194f93ce6fe2bdfe2969cc82d/node /home/pi/.vscode-server/bin/d037ac076cee195194f93ce6fe2bdfe2969cc82d74          0.0    0.05499728  4196  2640 R  3.3  0.4  0:00.33 htop 353 avahi     6916  3068  2724 S  0.7  0.3  0:07.25 avahi-daemon: running [raspberrypi.local]655 pi-21   0 26604  4856  3940 S  0.0  0.5  0:00.00 /usr/bin/pipewire656 rtkit      21   1 24208  2376  2172 S  0.0  0.3  0:00.14 /usr/libexec/rtkit-daemon657 rtkit      20   0 24208  2376  2172 S  0.0  0.3  0:00.06 /usr/libexec/rtkit-daemon658 rtkit      RT   1 24208  2376  2172 S  0.0  0.3  0:00.04 /usr/libexec/rtkit-daemon6||||||5.8|||||4.56||||4.524176M 60372 37536 S  8.4  644.19 node server.js1749 pi20   0  9728  4196  2640 R  3.2  0.4  0:00.38 htop 1403 pi20   0  218M 93548 36704 S  0.6  9.9  0:49.55 /home/pi/.vscode-server/bin/d037ac076cee195194f93ce6fe2bdfe2969cc82d/node --dns-result-order=ipv4first /home/pi/.vscode-server/bin/d037ac076ce1728 pi        176M 60372 375366  6.4  0:01.28 node server.js353 avahi      20   0  6916  3068  2724 S  0.0  0.3  0:07.25 avahi-daemon: running [raspberrypi.local]|||1.9      0.0690||||||10.38 3.2963611.0362.6426963616
|||||||||9.8        2.69|| 2.6|||||||905842.4  6.25531176M 58436 37536 S  2.0  6.2  0:01.13 node server.js49728  4196  2640 R  2.0  00.45 htop656 rtkit      21   1 24208  2376  2172 S  0.0  0.3  0:00.14 /usr/libexec/rtkit-daemonpi@raspberrypi:~/kobuki $ ./bcmd 
motion_controller.cpp: In member function void MotionController::saveStatusToFile(const string&):
motion_controller.cpp:248:5: error: json was not declared in this scope
  248 |     json status;
      |     ^~~~
motion_controller.cpp:249:5: error: status was not declared in this scope; did you mean statx?
  249 |     status["x"] = current_x;
      |     ^~~~~~
      |     statx
motion_controller.cpp:258:32: error: variable std::ofstream file has initializer but incomplete type
  258 |     std::ofstream file(filename);
      |                                ^
pi@raspberrypi:~/kobuki $ ./bcmd 
motion_controller.cpp:3:10: fatal error: nlohmann/json.hpp: No such file or directory
    3 | #include <nlohmann/json.hpp>
      |          ^~~~~~~~~~~~~~~~~~~
compilation terminated.
pi@raspberrypi:~/kobuki $ 